Twenty Thirteen: fix "Must log in to post comment" message misalignment. Props beaulebens and obenland, fixes #23872.
git-svn-id: http://core.svn.wordpress.org/trunk@23827 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -2284,6 +2284,7 @@ footer.entry-meta {
 .comments-title,
 .comment-list,
 #reply-title,
+.must-log-in,
 #respond #commentform,
 #respond iframe {
 	display: block;
@@ -2294,6 +2295,7 @@ footer.entry-meta {
 
 .sidebar .comments-title,
 .sidebar .comment-list,
+.sidebar .must-log-in,
 .sidebar #reply-title,
 .sidebar .comment-navigation,
 .sidebar #respond #commentform {
